# raytracer

./: .gitignore  .gitmodules  README.md  raytracer.sln
Drawing/src/: PPMFileWriter.cs
RayTracer/: Program.cs  RayTracer.csproj
c-sharp/: Program.cs
cpp/the-ray-tracer-challenge/: .gitignore  CMakeLists.txt  Color.h  Math.h  PPMFileWriter.h  README.md  RayTracerChallenge.cpp  RayTracerChallenge.sln  RayTracerChallenge.vcxproj  RayTracerChallenge.vcxproj.filters  raytracer.sln  test.ppm  vec3.h
cpp/the-ray-tracer-challenge/src/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Math.h  Matrix.cpp  Matrix.h  PPMFileWriter.cpp  PPMFileWriter.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h  Translation.cpp  Translation.h  World.cpp  World.h  circle.ppm  clock.ppm  point3.cpp  point3.h  raytracer.cpp  raytracer.vcxproj  raytracer.vcxproj.filters  test.ppm  tuple.cpp  tuple.h  vec3.cpp  vec3.h
cpp/the-ray-tracer-challenge/tst/: Camera-test.cpp  Canvas-test.cpp  Lighting-test.cpp  Material-Tests.cpp  Matrix-test.cpp  Ray-test.cpp  Sphere-Tests.cpp  Tests.vcxproj  ToStringSpecializations.h  Transformation-test.cpp  Transformations-test.cpp  Tuple-test.cpp  Vector-test.cpp  World-test.cpp  main.cpp  pch.h
cpp/the-ray-tracer-challenge/tst/CanvasTests/: CanvasTests.cpp  CanvasTests.vcxproj  CanvasTests.vcxproj.filters
cpp/the-ray-tracer-challenge/tst/MathTests/: MathTests.vcxproj  MathTests.vcxproj.filters  ToStringSpecializations.h  VectorTests.cpp
(+44 files in other folders)
